Add small border

--- a/web/styles.css
+++ b/web/styles.css
@@ -71,6 +71,8 @@ hr {
         transform: translateX(calc(var(--toggle-width) * 0.475));
         background-color: white;
         box-shadow: none;
+        border: 1px solid lightgray;
+        top: calc(var(--toggle-width) * 0.066 - 1px);
     }
 
     .slider {
