--- a/web/styles.css
+++ b/web/styles.css
@@ -30,7 +30,6 @@ body {
     font-family: sans-serif;
     background: var(--bg-primary);
     color: var(--text-primary);
-    /* eslint-disable-next-line css/use-baseline */
     zoom: 114%;
     transition: background 0.2s, color 0.2s;
 }
@@ -62,18 +61,18 @@ hr {
         background-color: var(--dark);
         border-radius: calc(var(--toggle-width) * 0.25);
         cursor: pointer;
+    }
 
-        &.checked .slider {
-            background-color: var(--light);
-        }
+    input:checked~.slider {
+        background-color: var(--light);
+    }
 
-        &.checked .slider::before {
-            transform: translateX(calc(var(--toggle-width) * 0.475));
-            background-color: white;
-            box-shadow: none;
-            border: 1px solid lightgray;
-            top: calc(var(--toggle-width) * 0.066 - 1px);
-        }
+    input:checked~.slider::before {
+        transform: translateX(calc(var(--toggle-width) * 0.475));
+        background-color: white;
+        box-shadow: none;
+        border: 1px solid lightgray;
+        top: calc(var(--toggle-width) * 0.066 - 1px);
     }
 
     .slider {
@@ -172,7 +171,6 @@ textarea {
     font-weight: bold;
     background: var(--bg-secondary);
     color: var(--text-primary);
-    /* eslint-disable-next-line css/use-baseline */
     resize: vertical;
 }
 
