--- a/web/styles.css
+++ b/web/styles.css
@@ -135,7 +135,7 @@ input:checked~.slider::before {
     gap: 8px;
 }
 
-.fill-color-group {
+.checkbox-group {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -152,7 +152,9 @@ input:checked~.slider::before {
         width: 16px;
         height: 16px;
     }
+}
 
+.fill-color-group {
     input[type="color"]:disabled {
         opacity: 0.5;
         cursor: not-allowed;
