Don't take up space with "$" when math mode is not activated

--- a/web/styles.css
+++ b/web/styles.css
@@ -191,6 +191,10 @@ input:checked~.slider::before {
 .input-wrapper.math-mode-disabled .math-delimiter {
     opacity: 0;
     visibility: hidden;
+    height: 0;
+    padding: 0;
+    border: none;
+    overflow: hidden;
 }
 
 .input-wrapper.math-mode-disabled textarea {
