--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -48,6 +48,7 @@ hr {
 
     position: relative;
     width: var(--toggle-width);
+    margin-bottom: 5em;
 
     input {
         position: absolute;
@@ -161,11 +162,6 @@ input:checked~.slider::before {
     }
 }
 
-.input-wrapper {
-    position: relative;
-    margin-bottom: 12px;
-}
-
 .math-delimiter {
     font-family: "Courier New", monospace;
     font-size: 1.2rem;
@@ -188,26 +184,34 @@ input:checked~.slider::before {
     border-radius: 0 0 4px 4px;
 }
 
-.input-wrapper.math-mode-disabled .math-delimiter {
-    opacity: 0;
-    visibility: hidden;
-    height: 0;
-    padding: 0;
-    border: none;
-    overflow: hidden;
-}
+#inputWrapper {
+    &.math-mode-disabled {
+        .math-delimiter {
+            opacity: 0;
+            visibility: hidden;
+            height: 0;
+            padding: 0;
+            border: none;
+            overflow: hidden;
+        }
 
-.input-wrapper.math-mode-disabled textarea {
-    border-radius: 4px;
-}
+        textarea {
+            border-radius: 4px;
+        }
+    }
 
-.input-wrapper:not(.math-mode-disabled) textarea {
-    border-radius: 0;
-    border-top: none;
-    border-bottom: none;
+    &:not(.math-mode-disabled) {
+        textarea {
+            border-radius: 0;
+            border-top: none;
+            border-bottom: none;
+        }
+    }
 }
 
 textarea {
+    /* https://stackoverflow.com/a/3454002 */
+    display: block;
     width: 100%;
     height: 120px;
     box-sizing: border-box;
@@ -270,12 +274,6 @@ button {
             background: var(--button-hover);
         }
     }
-}
-
-.footer {
-    margin-top: 20px;
-    font-size: 11px;
-    color: var(--text-secondary);
 }
 
 .status {
@@ -401,9 +399,4 @@ button {
         background: #2196f33d;
         color: #64b5f6;
     }
-}
-
-#spaceBelow {
-    display: block;
-    height: 5em;
 }
